--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -14,26 +14,13 @@ body{
     align-items: center;
 }
 .container{
-    width: 400px;
+    padding: 10px;
+    width: 90%;
     height: 500px;
     background-color: rgba(255,255,255,0.25);
     backdrop-filter: blur(15px);
     display: flex;
-    justify-content: space-around;
     align-items: center;
     flex-direction: column;
-}
-.form{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-.form input{
-    height: 50px;
-    width: 100%;
-    border: none;
-    border-radius: 9px;
-}
-.form input::placeholder{
-    text-align: center;
+    gap: 40px;
 }
