--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -20,7 +20,46 @@ body{
     background-color: rgba(255,255,255,0.25);
     backdrop-filter: blur(15px);
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     gap: 40px;
+}
+.btn-container{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+}
+.btn-container button{
+    border: none;
+    outline: none;
+    width: 120px;
+    height: 50px;
+    background-color: red;
+    color: white;
+    font-size: 15px;
+    box-shadow: 1px 1px 1px black;
+    border-radius: 10px;
+}
+.btn-container button:hover{
+    background-color: rgb(223, 2, 2);
+}
+.createClient{
+    padding: 10px;
+    width: 90%;
+    height: 500px;
+    background-color: rgba(255,255,255,0.25);
+    backdrop-filter: blur(15px);
+    display: none;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    gap: 40px;
+}
+.createClient input{
+    height: 50px;
+    width: 300px;
+    border: none;
+    border-radius: 10px;
 }
